# users-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: auth.py  authentication.py  google.py  items.py  items_service.py  public_key_token.py  users.py
app/core/: config.py  db.py
app/models/: __init__.py  item.py  login.py  password.py  public_key.py  token.py  user.py
app/repository/: items_repository.py  paswords_repository.py  users_repository.py
app/seeds/: README.md  seed_config.py  seed_db.py  seed_records_1.py  seed_records_2.py  seed_records_3.py  seed_records_demo.py  seed_records_sample.py
app/services/: auth_service.py  base_service.py  google_service.py  items_service.py  key_manager_service.py  players_service.py  token_service.py  users_service.py
app/static/css/: styles.css
app/templates/: welcome.html
app/tests/: conftest.py
app/tests/api/routes/: test_auth.py  test_authentication.py  test_google.py  test_items.py  test_users.py
app/tests/models/: test_user.py
app/tests/repository/: test_users_repository.py
app/tests/services/: test_auth_service.py  test_google_service.py  test_key_manager_service.py  test_token_service.py  test_users_service.py
app/tests/utils/: items.py  users.py  utils.py
app/utilities/: context_managers.py  dependencies.py  exceptions.py  messages.py  middlewares.py
scripts/: format.bat  init-multiple-dbs.sh  lint.bat  seed.bat  seed.sh  test.bat
